partial completed project

--- a/prj3-sol/README
+++ b/prj3-sol/README
@@ -2,7 +2,12 @@ Name:		SHUBHAM KUMAR SINGH
 B-Number:	B00955182
 Email:		ssing163@binghamton.edu
 
-# Project 2
+# Project 3
 
 <strong> Project Status: In Progress </strong>
 
+## Test Report
+
+Below is the screenshot for #5 questions tand all test cases passed.
+
+![Test Report](./test-result/test.png)
